@@ -1,3 +1,8 @@
+2015-04-01  Corinna Vinschen  <corinna@vinschen.de>
+
+	* grp.cc (internal_getgroups): Handle negative domain index to avoid
+	crashes.
+
 2015-03-31  Renato Silva  <br.renatosilva@gmail.com>
 
 	* net.cc (cygwin_gethostname): Fix buffer size error handling.
